--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
+        "jaeger/querylist": "^4.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "league/html-to-markdown": "^4.9",
         "php-ai/php-ml": "^0.8.0"
     },
     "require-dev": {
