--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "league/html-to-markdown": "^4.9",
-        "php-ai/php-ml": "^0.8.0"
+        "php-ai/php-ml": "^0.8.0",
+        "pixel418/markdownify": "^2.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
